[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Misc/MiscTTLog.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Resources/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Framework/Panel/PanelSwipe.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Prefab/BasicColorBg.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Prefab/TopFixed.tscn" type="PackedScene" id=5]
[ext_resource path="res://Theme/EmptyBar.tres" type="Theme" id=6]
[ext_resource path="res://Fonts/Text33.tres" type="DynamicFont" id=7]
[ext_resource path="res://Fonts/Text43_outline.tres" type="DynamicFont" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
font_data = ExtResource( 2 )

[node name="Panel" type="CenterContainer"]
margin_right = 720.0
margin_bottom = 1280.0
rect_min_size = Vector2( 720, 1280 )
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicBg" parent="." instance=ExtResource( 4 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 720.0
margin_bottom = 1280.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
rect_min_size = Vector2( 720, 1280 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopFixed" parent="VBoxContainer" instance=ExtResource( 5 )]
mouse_filter = 2

[node name="fixed" type="Control" parent="VBoxContainer/TopFixed"]
margin_right = 10.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )

[node name="BtnBg" type="Button" parent="VBoxContainer/TopFixed"]
margin_left = 14.0
margin_right = 138.0
margin_bottom = 60.0
rect_min_size = Vector2( 124, 60 )
focus_mode = 0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "O"

[node name="space" type="Control" parent="VBoxContainer/TopFixed"]
margin_left = 142.0
margin_right = 578.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BtnSwitch" type="Button" parent="VBoxContainer/TopFixed"]
margin_left = 582.0
margin_right = 706.0
margin_bottom = 60.0
rect_min_size = Vector2( 124, 60 )
focus_mode = 0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "-"

[node name="fixed2" type="Control" parent="VBoxContainer/TopFixed"]
margin_left = 710.0
margin_right = 720.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 720.0
margin_bottom = 1280.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 1206.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
scroll_vertical_enabled = false
script = ExtResource( 3 )
scroll_list = [ 0, 704 ]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
margin_right = 1404.0
margin_bottom = 1196.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer"]
margin_right = 700.0
margin_bottom = 1196.0
rect_min_size = Vector2( 700, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "log
log
log"
text = "log
log
log"
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogSetting" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer"]
margin_left = 704.0
margin_right = 1404.0
margin_bottom = 1196.0
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting"]
margin_top = 464.0
margin_right = 700.0
margin_bottom = 524.0

[node name="fixed2" type="Control" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer5"]
margin_right = 100.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 0 )

[node name="BtnClear" type="Button" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer5"]
margin_left = 104.0
margin_right = 604.0
margin_bottom = 60.0
rect_min_size = Vector2( 500, 60 )
focus_mode = 0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 1, 0.290196, 0.290196, 1 )
custom_colors/font_color = Color( 1, 0.290196, 0.290196, 1 )
custom_colors/font_color_hover = Color( 1, 0.290196, 0.290196, 1 )
custom_colors/font_color_pressed = Color( 1, 0.290196, 0.290196, 1 )
enabled_focus_mode = 0
text = "Clear"

[node name="space2" type="Control" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer5"]
margin_left = 608.0
margin_right = 700.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="fixed" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting"]
margin_top = 528.0
margin_right = 700.0
margin_bottom = 576.0
rect_min_size = Vector2( 0, 48 )

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting"]
margin_top = 580.0
margin_right = 700.0
margin_bottom = 628.0

[node name="fixed2" type="Control" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer4"]
margin_right = 100.0
margin_bottom = 48.0
rect_min_size = Vector2( 100, 0 )

[node name="CheckDebug" type="CheckBox" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer4"]
margin_left = 104.0
margin_right = 242.0
margin_bottom = 48.0
focus_mode = 0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Debug"

[node name="space2" type="Control" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer4"]
margin_left = 246.0
margin_right = 700.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting"]
margin_top = 632.0
margin_right = 700.0
margin_bottom = 680.0

[node name="fixed2" type="Control" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer2"]
margin_right = 100.0
margin_bottom = 48.0
rect_min_size = Vector2( 100, 0 )

[node name="CheckWarning" type="CheckBox" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer2"]
margin_left = 104.0
margin_right = 275.0
margin_bottom = 48.0
focus_mode = 0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
pressed = true
enabled_focus_mode = 0
text = "Warning"

[node name="space2" type="Control" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer2"]
margin_left = 279.0
margin_right = 700.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting"]
margin_top = 684.0
margin_right = 700.0
margin_bottom = 732.0

[node name="fixed" type="Control" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer3"]
margin_right = 100.0
margin_bottom = 48.0
rect_min_size = Vector2( 100, 0 )

[node name="CheckError" type="CheckBox" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer3"]
margin_left = 104.0
margin_right = 216.0
margin_bottom = 48.0
focus_mode = 0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
pressed = true
enabled_focus_mode = 0
text = "Error"

[node name="space2" type="Control" parent="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer3"]
margin_left = 220.0
margin_right = 700.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="VBoxContainer/TopFixed/BtnBg" to="." method="_on_BtnBg_pressed"]
[connection signal="pressed" from="VBoxContainer/TopFixed/BtnSwitch" to="." method="_on_BtnSwitch_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer5/BtnClear" to="." method="_on_BtnClear_pressed"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer4/CheckDebug" to="." method="_on_CheckDebug_toggled"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer2/CheckWarning" to="." method="_on_CheckWarning_toggled"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/LogSetting/HBoxContainer3/CheckError" to="." method="_on_CheckError_toggled"]
